--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   flutter_svg: ^1.1.5
   webview_flutter: ^3.0.0
   flutter_simple_treeview: ^3.0.1
+  intl: any
+  i18n_extension: ^9.0.2
 
 
 dev_dependencies:
@@ -110,3 +112,5 @@ flutter:
 
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+flutter_intl:
+  enabled: true
