--- a/.github/workflows/build-publish.yml
+++ b/.github/workflows/build-publish.yml
@@ -17,6 +17,7 @@ jobs:
       uses: subosito/flutter-action@v1
       with:
         channel: 'stable'
+        flutter-version: '2.x'
       
     - name: Install Flutter dependencies
       run: flutter pub get
