--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -114,3 +114,5 @@ flutter:
   # see https://flutter.dev/custom-fonts/#from-packages
 flutter_intl:
   enabled: true
+  class_name: S
+  main_locale: zh_CN
