--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -53,11 +53,12 @@ android {
         applicationId "com.example.ruoyi_app"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-build-configuration.
-        minSdkVersion 19
+        minSdkVersion 21
         targetSdkVersion 26
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
         archivesBaseName = "Morigele"
+        multiDexEnabled true     //（添加这段配置）
     }
 
 
