--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,11 @@ dependencies:
   google_fonts: ^5.1.0
   photo_view: ^0.14.0
   image_gallery_saver: ^2.0.3
+  chewie: ^1.7.0
+  video_player: ^2.7.1
+  pdf: ^3.10.4
+  syncfusion_flutter_pdf: ^22.2.11
+  url_launcher: ^6.1.14
 
 
 dev_dependencies:
